agent/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: twotakeone
  labels:
    app.kubernetes.io/name: twotakeone
